--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,8 @@ dependencies {
     implementation 'androidx.compose.material:material:1.0.5'
     // Animations
     implementation 'androidx.compose.animation:animation:1.0.5'
+    // Material icons
+    implementation "androidx.compose.material:material-icons-extended:1.0.5"
     // Tooling support (Previews, etc.)
     implementation 'androidx.compose.ui:ui-tooling:1.0.5'
 
