--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ android {
 
     kotlinOptions {
         jvmTarget = '11'
+        useIR = true
     }
 
     composeOptions {
@@ -44,23 +45,22 @@ android {
 dependencies {
     implementation 'androidx.activity:activity-ktx:1.4.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'com.google.android.material:material:1.5.0'
 
     // Compose Toolkit
     implementation 'androidx.activity:activity-compose:1.4.0'
-    // Integration with ViewModels
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.4.0'
+    implementation 'androidx.constraintlayout:constraintlayout-compose:1.0.0'
     // When using a MDC theme
     // Limitations: https://github.com/material-components/material-components-android-compose-theme-adapter#limitations
     implementation "com.google.android.material:compose-theme-adapter:1.1.3"
     // Compose Material Design
     implementation 'androidx.compose.material:material:1.0.5'
-    // Animations
-    implementation 'androidx.compose.animation:animation:1.0.5'
     // Material icons
     implementation "androidx.compose.material:material-icons-extended:1.0.5"
+    // Animations
+    implementation 'androidx.compose.animation:animation:1.0.5'
     // Tooling support (Previews, etc.)
     implementation 'androidx.compose.ui:ui-tooling:1.0.5'
 
