--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application
         android:theme="@style/Theme.Test52_Compose01"
-        android:name=".App"
+        android:name=".core.App"
         android:allowBackup="true"
         android:supportsRtl="true"
         android:label="@string/app_name"
@@ -13,7 +13,7 @@
         android:fullBackupContent="@xml/backup_descriptor">
 
         <activity
-            android:name=".MainActivity"
+            android:name=".core.MainActivity"
             android:exported="true">
 
             <intent-filter>
