--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ru.webanimal.test52_compose01">
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    package="ru.webanimal.test52_compose01" >
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:theme="@style/Theme.Test52_Compose01"
